--- a/Amaterasu/index.html
+++ b/Amaterasu/index.html
@@ -24,6 +24,8 @@
     crossorigin="anonymous">
     <!-- Bootstrap -->
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css"/>
+
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <title>Amaterasu</title>
 </head>
@@ -52,12 +54,12 @@
                 <i class="fas fa-moon"></i>
               </li>
               <li class="nav-item">
-                <a class="nav-link cadastro-btn" href="#">Cadastrar</a>
+                <a class="nav-link1 login-btn" href="#">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link login-btn" href="#">Login</a>
+                <a class="nav-link1 cadastro-btn" href="#">Cadastrar</a>
               </li>
-             
+              
           </div>
         </div>
       </nav>
@@ -74,6 +76,36 @@
     <!--Fixed Banner-->
 
     <!--Feedbacks-->
+    <section>
+      <div class="container">
+        <div class="section-title">
+          <h2>Feedbacks</h2>
+          <span class="section-separator"></span>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, quibusdam! Dolorem, libero.</p>
+        </div>
+      </div>
+      <div class="testimonials-corousel-wrap">
+        <div class="listing-carousel-button listing-carousel-button-next"><i class="fa fa-caret-right" style="color: #fff"></i></div>
+        <div class="listing-carousel-button listing-carousel-button-prev"><i class="fa fa-caret-left" style="color: #fff"></i></div>
+        <div class="testimonials-corousel">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="testi-item">
+                  <div class="testi-avatar"><img src="img/pessoa4.jpg"></div>
+                  <div class="testimonials-text-before"><i class="fa fa-quote-right"></i></div>
+                  <div class="testimonials-text">
+                    <div class="listing-rating">
+                      <i class="fa fa-star"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--Feedbacks-->
 
     <!--Nossa Filosofia-->
@@ -160,5 +192,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" 
     integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" 
     crossorigin="anonymous"></script> 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script scr="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script>
+    <script type="script.js"></script>
 </body>
 </html>
