--- a/Amaterasu/index.html
+++ b/Amaterasu/index.html
@@ -60,7 +60,7 @@
                 <a class="nav-link1 login-btn" href="#">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link1 cadastro-btn" href="#">Cadastrar</a>
+                <a class="nav-link1 cadastro-btn" href="login.html">Cadastrar</a>
               </li>
               
           </div>
@@ -127,7 +127,7 @@
     <section id="banner" class="my-5 py-5">
         <div class="container">
             <h4>Aumente seu repertório</h4>
-            <h1>Cursos de educação financeira<br>EAD gratuitos!</h1>
+            <h1>Cursos de educação empresarial em<br>EAD gratuitos!</h1>
             <button class="text-uppercase">Conferir</button>
         </div>
     </section>
