--- a/Amaterasu/login.html
+++ b/Amaterasu/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Amaterasu</title>
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/login.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon"> 
     <script src="https://kit.fontawesome.com/587541520f.js" crossorigin="anonymous"></script>
 </head>
