--- a/Amaterasu/login.html
+++ b/Amaterasu/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Amaterasu</title>
     <link rel="stylesheet" href="estilo/login.css">
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon"> 
+    <link rel="shortcut icon" href="img/logo_amaterasu2.png" type="image/x-icon"> 
     <script src="https://kit.fontawesome.com/587541520f.js" crossorigin="anonymous"></script>
 </head>
 <body>
